# JML-Automation

./: .gitignore  ExchangeOnline-Cert.cer  Makefile  PROJECT_STRUCTURE.md  README.md  README_CLEAN.md  README_INIT.md  all_files.txt  app.py  check_okta_users.py  complete_termination.py  config.py  config_clean.py  debug_google_auth.py  enterprise_termination_orchestrator.py  execute_valerie_termination.py  google_termination.py  logging_system.py  login_debug_report.py  manual_convert.ps1  microsoft_termination.py  okta_termination.py  onboard.ps1  onboard.py  partner.py  performance_test.py  pyproject.toml  requirements.txt  search_tickets.py  slack_notifications.py  terminate.py  termination_extractor.py  termination_main.py  termination_okta_processor.py  test_complete_google.py  test_dry_run_comprehensive.py  test_extractor_in_progress.py  test_google_auth.py  test_microsoft_okta_group_cleanup.py  test_microsoft_okta_termination_integration.py  (+10 more)
.github/: copilot-instructions.md
archived_misc/: PROJECT_STRUCTURE_CLEAN.md  config_append.py  test.py  ticket_processor_fixed.py
archived_tests/: test_correct_okta_search.py  test_dry_run.py  test_fetch.py  test_okta_employee_lookup.py  test_okta_field_names.py  test_okta_filter_syntax.py  test_simple.py  test_ticket_extraction.py  test_ticket_extraction_clean.py
backup_20250812_130801/: config_simple.py  test_config_import.py
config/: departments.yaml  groups.yaml  settings.yaml  termination_order.yaml
dev/: README.md
docs/: Exchange_Certificate_Integration.md  SINGLE_APP_TERMINATION_README.md  (+2 more)
(+130 files in other folders)
